bug: Fix collapse button functionalities on expand/resize window

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
     color: #fff;
 }
 
-#navbarSupportedContent {
+#navbarDropDowns {
     cursor: pointer;
 }
 
@@ -39,6 +39,19 @@
     margin-right: 2.25rem;
 }
 
+.api-button.collapsed:before
+{
+    content:'+' ;
+    display:block;
+    width:15px;
+}
+.api-button:before
+{
+    content:'-' ;
+    display:block;
+    width:15px;
+}
+
 .news-picture {
     width: 15%;
     height: 7%;
@@ -68,6 +81,10 @@
     width: 213px;
     height: 123px;
     min-height: 123px;
+}
+
+.wiki {
+
 }
 
 .card {
